syntax = "proto3";

package account;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

// Generated according to https://cloud.google.com/apis/design/standard_methods
service OrganizationService {
  rpc ListOrganizations(ListOrganizationsRequest) returns (ListOrganizationsResponse) {
  }

  rpc GetOrganization(GetOrganizationRequest) returns (Organization) {
  }

  rpc CreateOrganization(CreateOrganizationRequest) returns (Organization) {
  }

  rpc UpdateOrganization(UpdateOrganizationRequest) returns (Organization) {
  }

  rpc DeleteOrganization(DeleteOrganizationRequest) returns (google.protobuf.Empty) {
  }
}

message Organization {
}

message ListOrganizationsRequest {
  // The maximum number of items to return.
  int32 page_size = 1;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 2;
}

message ListOrganizationsResponse {
  // The field name should match the noun "organization" in the method name.
  // There will be a maximum number of items returned based on the page
  //_size field in the request.
  repeated Organization organizations = 1;

  // Token to retrieve the next page of results, or empty if there are
  // no more results in the list.
  string next_page_token = 2;
}

message GetOrganizationRequest {
  // The field will contain name of the resource requested.
  string id = 1;
}

message CreateOrganizationRequest {
  // The parent resource name where the organization is to be created.
  string parent = 1;

  // The organization id to use for this organization.
  string organization_id = 2;

  // The organization resource to create.
  // The field name should match the Noun in the method name.
  Organization organization = 3;
}

message UpdateOrganizationRequest {
  // The organization resource which replaces the resource on the server.
  Organization organization = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers
  // /docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteOrganizationRequest {
  // The resource name of the organization to be deleted.
  string id = 1;
}
